// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildReplicableItemQuery query fields shows correct fields when verification=false 1`] = `
"query ($ids: [GeoMockRegistryID!]) {
  geoNode {
    testGraphqlFieldName(ids: $ids) {
      nodes {
        id
        checksumMismatch
        createdAt
        lastSyncFailure
        lastSyncedAt
        missingOnPrimary
        modelRecordId
        retryAt
        retryCount
        state
        verificationChecksum @include(if: false)
        verificationChecksumMismatched @include(if: false)
        verificationFailure @include(if: false)
        verificationRetryAt @include(if: false)
        verificationRetryCount @include(if: false)
        verificationStartedAt @include(if: false)
        verificationState @include(if: false)
        verifiedAt @include(if: false)
      }
    }
  }
}"
`;

exports[`buildReplicableItemQuery query fields shows correct fields when verification=true 1`] = `
"query ($ids: [GeoMockRegistryID!]) {
  geoNode {
    testGraphqlFieldName(ids: $ids) {
      nodes {
        id
        checksumMismatch
        createdAt
        lastSyncFailure
        lastSyncedAt
        missingOnPrimary
        modelRecordId
        retryAt
        retryCount
        state
        verificationChecksum @include(if: true)
        verificationChecksumMismatched @include(if: true)
        verificationFailure @include(if: true)
        verificationRetryAt @include(if: true)
        verificationRetryCount @include(if: true)
        verificationStartedAt @include(if: true)
        verificationState @include(if: true)
        verifiedAt @include(if: true)
      }
    }
  }
}"
`;
